AC_INIT(src/makeTreeMedial.cpp)
AM_INIT_AUTOMAKE(spheretree-dist, 1.0)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS()
AC_LANG_C()

#CFLAGS="$CFLAGS -g -pg"
#CXXFLAGS="$CXXFLAGS -g -pg"
#LDFLAGS="$LDFLAGS -g -pg"
#AC_SUBST(CXXFLAGS)
#AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile src/Makefile src/Base/Makefile src/Exceptions/Makefile src/Geometry/Makefile src/Geometry/pcube/Makefile src/Storage/Makefile src/LinearAlgebra/Makefile src/MinMax/Makefile src/Surface/Makefile src/SphereTree/Makefile src/Export/Makefile src/BBox/Makefile src/BBox/qHull/Makefile src/MedialAxis/Makefile src/API/Makefile src/API/SFWhite/Makefile src/BBox/MVBB/Makefile)
